@@ -32,7 +32,8 @@ jimport('joomla.utilities.utility');
  * @see http://au.php.net/manual/en/filters.php Stream Filters
  * @see http://au.php.net/manual/en/transports.php Socket Transports (used by some options, particularly HTTP proxy)
  */
-class JStream extends JObject {
+class JStream extends JObject
+{
 	// Publicly settable vars (protected to let our parent read them)
 	/** @var File Mode */
 	protected $filemode = 0644;
@@ -70,7 +71,8 @@ class JStream extends JObject {
 	 * Constructor
 	 * @param string Prefix of the stream; Note: unlike the JPATH_*, this has a final path seperator!
 	 */
-	function __construct($writeprefix='', $readprefix='', $context=Array()) {
+	function __construct($writeprefix='', $readprefix='', $context=Array())
+	{
 		$this->writeprefix = $writeprefix;
 		$this->readprefix = $readprefix;
 		$this->_contextOptions = $context;
@@ -97,26 +99,34 @@ class JStream extends JObject {
 	 * @param resource Context to use when opening
 	 * @param bool Use a prefix to open the file
 	 * @param bool Filename is a relative path (if false, strips JPATH_ROOT to make it relative)
+	 * @param bool Detect the processing method for the file and use the appropriate function to handle output automatically
 	 */
-	function open($filename, $mode='r', $use_include_path=false, $context=null, $use_prefix=true, $relative=false, $detectprocessingmode=true) {
+	function open($filename, $mode='r', $use_include_path=false, $context=null, $use_prefix=true, $relative=false, $detectprocessingmode=false)
+	{
 		$filename = $this->_getFilename($filename, $mode, $use_prefix, $relative);
-		if(!$filename) {
+		if(!$filename)
+		{
 			$this->setError(JText::_('No filename set'));
 			return false;
 		}
+
 		$this->filename = $filename;
 		$this->_openmode = $mode;
 
 		$url = parse_url($filename);
 		$retval = false;
-		if(isset($url['scheme'])) {
+		if(isset($url['scheme']))
+		{
 			// if we're dealing with a Joomla! stream, load it
 			if(JFilesystemHelper::isJoomlaStream($url['scheme'])) {
 				require_once(dirname(__FILE__).DS.'streams'.DS.$url['scheme'].'.php');
 			}
+				
 			// we have a scheme! force the method to be f
 			$this->processingmethod = 'f';
-		} else if($detectprocessingmode) {
+		}
+		else if($detectprocessingmode)
+		{
 			$ext = strtolower(JFile::getExt($this->filename));
 			switch ($ext)
 			{
@@ -133,14 +143,15 @@ class JStream extends JObject {
 				default:
 					$this->processingmethod = 'f';
 					break;
-		}
+			}
 		}
 		// Capture PHP errors
 		$php_errormsg = 'Error Unknown whilst opening a file';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
 		// Decide which context to use:
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz': // gzip doesn't support contexts or streams
 				$this->_fh = gzopen($filename, $mode, $use_include_path);
 				break;
@@ -149,18 +160,16 @@ class JStream extends JObject {
 				break;
 			case 'f': // fopen can handle streams
 			default:
-				if($context) {
-					//  one supplied at open; overrides everything
+				if($context) { 					//  one supplied at open; overrides everything
 					$this->_fh = fopen($filename, $mode, $use_include_path, $context);
-				} else if ($this->_context) {
-					// one provided at initialisation
+				} else if ($this->_context) { 	// one provided at initialisation
 					$this->_fh = fopen($filename, $mode, $use_include_path, $this->_context);
-				} else {
-					// no context; all defaults
+				} else { 						// no context; all defaults
 					$this->_fh = fopen($filename, $mode, $use_include_path);
 				}
 				break;
 		}
+
 		if(!$this->_fh) {
 			$this->setError($php_errormsg);
 		} else {
@@ -178,8 +187,10 @@ class JStream extends JObject {
 	 * Note: if the file is not open the system will return true
 	 * Note: this function destroys the file handle as well
 	 */
-	function close() {
-		if(!$this->_fh) {
+	function close()
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return true;
 		}
@@ -188,7 +199,8 @@ class JStream extends JObject {
 		$php_errormsg = 'Error Unknown';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz':
 				$res = gzclose($this->_fh);
 				break;
@@ -200,14 +212,20 @@ class JStream extends JObject {
 				$res = fclose($this->_fh);
 				break;
 		}
+
+
 		if(!$res) {
 			$this->setError($php_errormsg);
-		} else {
+		}
+		else
+		{
 			$this->_fh = null; // reset this
 			$retval = true;
 		}
 		// chmod the file after its closed if we wrote
-		if($this->_openmode[0] == 'w') $this->chmod();
+		if($this->_openmode[0] == 'w') {
+			$this->chmod();
+		}
 		// restore error tracking to what it was before
 		ini_set('track_errors',$track_errors);
 		// return the result
@@ -217,17 +235,21 @@ class JStream extends JObject {
 	/**
 	 * Work out if we're at the end of the file for a stream
 	 */
-	function eof() {
-		if(!$this->_fh) {
+	function eof()
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
+
 		$retval = false;
 		// Capture PHP errors
 		$php_errormsg = '';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz':
 				$res = gzeof($this->_fh);
 				break;
@@ -237,9 +259,11 @@ class JStream extends JObject {
 				$res = feof($this->_fh);
 				break;
 		}
+
 		if($php_errormsg) {
 			$this->setError($php_errormsg);
 		}
+
 		// restore error tracking to what it was before
 		ini_set('track_errors',$track_errors);
 		// return the result
@@ -249,34 +273,46 @@ class JStream extends JObject {
 	/**
 	 * Retrieve the file size of the path
 	 */
-	function filesize() {
-		if(!$this->filename) {
+	function filesize()
+	{
+		if(!$this->filename)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
+
 		$retval = false;
 		// Capture PHP errors
 		$php_errormsg = '';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
 		$res = @filesize($this->filename);
-		if(!$res) {
+		if(!$res)
+		{
 			$tmp_error = '';
+				
 			if($php_errormsg) { // some bad went wrong
 				$tmp_error = $php_errormsg; // store the error in case we need it
 			}
+				
 			$res = JFilesystemHelper::remotefsize($this->filename);
-			if(!$res) {
+				
+			if(!$res)
+			{
 				if($tmp_error) { // use the php_errormsg from before
 					$this->setError($tmp_error);
-				} else  { // error but nothing from php? how strange! create our own
+				} else { // error but nothing from php? how strange! create our own
 					$this->setError(JText::_('Failed to get file size. This may not work for all streams!'));
 				}
-			} else {
+			}
+			else
+			{
 				$this->_filesize = $res;
 				$retval = $res;
 			}
-		} else {
+		}
+		else
+		{
 			$this->_filesize = $res;
 			$retval = $res;
 		}
@@ -286,17 +322,21 @@ class JStream extends JObject {
 		return $retval;
 	}
 
-	function gets($length=0) {
-		if(!$this->_fh) {
+	function gets($length=0)
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
+
 		$retval = false;
 		// Capture PHP errors
 		$php_errormsg = 'Error Unknown';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz':
 				$res = $length ? gzgets($this->_fh, $length) : gzgets($this->_fh);
 				break;
@@ -306,6 +346,7 @@ class JStream extends JObject {
 				$res = $length ? fgets($this->_fh, $length) : fgets($this->_fh);
 				break;
 		}
+
 		if(!$res) {
 			$this->setError($php_errormsg);
 		} else {
@@ -323,18 +364,19 @@ class JStream extends JObject {
 	 * @param int length of data to read
 	 * @see http://www.php.net/manual/en/function.fread.php
 	 */
-	function read($length=0) {
-		if(!$this->_filesize && !$length) {
+	function read($length=0)
+	{
+		if(!$this->_filesize && !$length)
+		{
 			$this->filesize(); // get the filesize
 			if(!$this->_filesize) {
-				//$this->setError(JText::_('No filesize detected; Try specifying a filesize'));
-				//return false;
 				$length = -1; // set it to the biggest and then wait until eof
 			} else {
 				$length = $this->_filesize;
 			}
 		}
-		if(!$this->_fh) {
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
@@ -346,7 +388,8 @@ class JStream extends JObject {
 		$remaining = $length;
 		do {
 			// do chunked reads where relevant
-			switch($this->processingmethod) {
+			switch($this->processingmethod)
+			{
 				case 'bz':
 					$res = ($remaining > 0) ? bzread($this->_fh, $remaining) : bzread($this->_fh, $this->chunksize);
 					break;
@@ -358,16 +401,22 @@ class JStream extends JObject {
 					$res = ($remaining > 0) ? fread($this->_fh, $remaining) : fread($this->_fh, $this->chunksize);
 					break;
 			}
-			if(!$res) {
+				
+			if(!$res)
+			{
 				$this->setError($php_errormsg);
 				$remaining = 0; // jump from the loop
-			} else {
+			} else
+			{
 				if(!$retval) $retval = '';
 				$retval .= $res;
-				if(!$this->eof()) {
+				if(!$this->eof())
+				{
 					$len = strlen($res);
 					$remaining -= $len;
-				} else {
+				}
+				else
+				{
 					// if its the end of the file then we've nothing left to read; reset remaining and len
 					$remaining = 0;
 					$length = strlen($retval);
@@ -388,8 +437,10 @@ class JStream extends JObject {
 	 * @return boolean True on success, false on failure
 	 * @see http://www.php.net/manual/en/function.fseek.php
 	 */
-	function seek($offset, $whence=SEEK_SET) {
-		if(!$this->_fh) {
+	function seek($offset, $whence=SEEK_SET)
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
@@ -398,7 +449,8 @@ class JStream extends JObject {
 		$php_errormsg = '';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz':
 				$res = gzseek($this->_fh, $offset, $whence);
 				break;
@@ -421,8 +473,10 @@ class JStream extends JObject {
 		return $retval;
 	}
 
-	function tell() {
-		if(!$this->_fh) {
+	function tell()
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
@@ -431,7 +485,8 @@ class JStream extends JObject {
 		$php_errormsg = '';
 		$track_errors = ini_get('track_errors');
 		ini_set('track_errors', true);
-		switch($this->processingmethod) {
+		switch($this->processingmethod)
+		{
 			case 'gz':
 				$res = gztell($this->_fh);
 				break;
@@ -466,8 +521,10 @@ class JStream extends JObject {
 	 * @param int Size of chunks to write in
 	 * @see http://www.php.net/manual/en/function.fwrite.php
 	 */
-	function write(&$string, $length=0, $chunk=0) {
-		if(!$this->_fh) {
+	function write(&$string, $length=0, $chunk=0)
+	{
+		if(!$this->_fh)
+		{
 			$this->setError(JText::_('File not open'));
 			return false;
 		}
@@ -486,14 +543,18 @@ class JStream extends JObject {
 			$amount = ($remaining > $chunk) ? $chunk : $remaining;
 			$res = fwrite($this->_fh, $string, $amount);
 			// returns false on error or the number of bytes written
-			if($res === false) { // returned error
+			if($res === false)
+			{ // returned error
 				$this->setError($php_errormsg);
 				$retval = false;
 				$remaining = 0;
-			} else if($res === 0) { // wrote nothing?
+			}
+			else if($res === 0)
+			{ // wrote nothing?
 				$remaining = 0;
 				$this->setError('Warning: No data written');
-			} else { // wrote something
+			} else
+			{ // wrote something
 				$remaining -= $res;
 			}
 		} while($remaining);
@@ -508,8 +569,10 @@ class JStream extends JObject {
 	 * chmod wrapper
 	 * @param mixed Mode to use
 	 */
-	function chmod($filename='', $mode=0) {
-		if(!$filename) {
+	function chmod($filename='', $mode=0)
+	{
+		if(!$filename)
+		{
 			if(!isset($this->filename) || !$this->filename) {
 				$this->setError(JText::_('Filename not set'));
 				return false;
@@ -527,7 +590,8 @@ class JStream extends JObject {
 		ini_set('track_errors', true);
 		$sch = parse_url($filename, PHP_URL_SCHEME);
 		// scheme specific options; ftp's chmod support is fun
-		switch($sch) {
+		switch($sch)
+		{
 			case 'ftp':
 			case 'ftps':
 				$res = JFilesystemHelper::ftpChmod($filename, $mode);
@@ -549,14 +613,32 @@ class JStream extends JObject {
 		return $retval;
 	}
 
+	/**
+	 * Get the stream metadata
+	 * @see http://au.php.net/manual/en/function.stream-get-meta-data.php
+	 * @return array header/metadata
+	 */
+	function get_meta_data() 
+	{
+		if(!$this->_fh)
+		{
+			$this->setError(JText::_('File not open'));
+			return false;
+		}
+		return stream_get_meta_data($this->_fh);
+	}
+
+
+
 	// ----------------------------
 	// Stream contexts
 	// ----------------------------
 
-    /**
-     * Builds the context from the array
-     */
-	function _buildContext() {
+	/**
+	 * Builds the context from the array
+	 */
+	function _buildContext()
+	{
 		// according to the manual this always works!
 		if(count($this->_contextOptions)) {
 			$this->_context = @stream_context_create($this->_contextOptions);
@@ -571,7 +653,8 @@ class JStream extends JObject {
 	 * @param Array Options to create the context with
 	 * @see http://www.php.net/stream_context_create
 	 */
-	function setContextOptions($context) {
+	function setContextOptions($context)
+	{
 		$this->_contextOptions = $context;
 		$this->_buildContext();
 	}
@@ -584,7 +667,8 @@ class JStream extends JObject {
 	 * @see http://www.php.net/stream_context_create Stream Context Creation
 	 * @see http://au.php.net/manual/en/context.php Context Options for various streams
 	 */
-	function addContextEntry($wrapper, $name, $value) {
+	function addContextEntry($wrapper, $name, $value)
+	{
 		$this->_contextOptions[$wrapper][$name] = $value;
 		$this->_buildContext();
 	}
@@ -595,15 +679,25 @@ class JStream extends JObject {
 	 * @param string The option to unset
 	 * @see http://www.php.net/stream_context_create
 	 */
-	function deleteContextEntry($wrapper, $name) {
-		if(isset($this->_contextOptions[$wrapper])) {
-			if(isset($this->_contextOptions[$wrapper][$name])) {
+	function deleteContextEntry($wrapper, $name)
+	{
+		// check the wrapper is set
+		if(isset($this->_contextOptions[$wrapper]))
+		{
+			// check that entry is set for that wrapper
+			if(isset($this->_contextOptions[$wrapper][$name]))
+			{
+				// unset the item
 				unset($this->_contextOptions[$wrapper][$name]);
+
+				// check that there are still items there
 				if(!count($this->_contextOptions[$wrapper])) {
+					// clean up an empty wrapper context option
 					unset($this->_contextOptions[$wrapper]);
 				}
 			}
 		}
+		// rebuild the context and apply it to the stream
 		$this->_buildContext();
 	}
 
@@ -611,9 +705,11 @@ class JStream extends JObject {
 	 * Applies the current context to the stream
 	 * Use this to change the values of the context after you've opened a stream
 	 */
-	function applyContextToStream() {
+	function applyContextToStream()
+	{
 		$retval = false;
-		if($this->_fh) {
+		if($this->_fh)
+		{
 			// Capture PHP errors
 			$php_errormsg = 'Unknown error setting context option';
 			$track_errors = ini_get('track_errors');
@@ -637,17 +733,22 @@ class JStream extends JObject {
 	 * @param
 	 * @see http://www.php.net/manual/en/function.stream-filter-append.php
 	 */
-	function &appendFilter($filtername, $read_write=STREAM_FILTER_READ, $params=Array() ) {
+	function &appendFilter($filtername, $read_write=STREAM_FILTER_READ, $params=Array() )
+	{
 		$res = false;
-		if($this->_fh) {
+		if($this->_fh)
+		{
 			// Capture PHP errors
 			$php_errormsg = '';
 			$track_errors = ini_get('track_errors');
 			ini_set('track_errors', true);
 
 			$res = @stream_filter_append($this->_fh, $filtername, $read_write, $params);
-			if(!$res && $php_errormsg) $this->setError($php_errormsg);
-			else $this->filters[] =& $res;
+			if(!$res && $php_errormsg) {
+				$this->setError($php_errormsg);
+			} else {
+				$this->filters[] =& $res;
+			}
 
 			// restore error tracking to what it was before
 			ini_set('track_errors',$track_errors);
@@ -655,9 +756,11 @@ class JStream extends JObject {
 		return $res;
 	}
 
-	function &prependFilter($filtername, $read_write=STREAM_FILTER_READ, $params=Array() ) {
+	function &prependFilter($filtername, $read_write=STREAM_FILTER_READ, $params=Array() )
+	{
 		$res = false;
-		if($this->_fh) {
+		if($this->_fh)
+		{
 			// Capture PHP errors
 			$php_errormsg = '';
 			$track_errors = ini_get('track_errors');
@@ -677,7 +780,8 @@ class JStream extends JObject {
 	 * filter list)
 	 * @return bool Result of operation
 	 */
-	function removeFilter(&$resource, $byindex=false) {
+	function removeFilter(&$resource, $byindex=false)
+	{
 		$res = false;
 		// Capture PHP errors
 		$php_errormsg = '';
@@ -703,7 +807,8 @@ class JStream extends JObject {
 	/**
 	 * Copy a file from src to dest
 	 */
-	function copy($src, $dest, $context=null, $use_prefix=true, $relative=false) {
+	function copy($src, $dest, $context=null, $use_prefix=true, $relative=false)
+	{
 		$res = false;
 		// Capture PHP errors
 		$php_errormsg = '';
@@ -713,7 +818,8 @@ class JStream extends JObject {
 		$chmodDest = $this->_getFilename($dest, 'w', $use_prefix, $relative);
 		$exists = file_exists($dest);
 		$context_support = version_compare(PHP_VERSION, '5.3', '>='); // 5.3 provides context support
-		if($exists && !$context_support) {
+		if($exists && !$context_support)
+		{
 			// the file exists and there is no context support
 			// this could cause a failure as we may need to overwrite the file
 			// so we write our own copy function that will work with a stream
@@ -724,21 +830,28 @@ class JStream extends JObject {
 			if($res) {
 				$reader = $this->_fh;
 				$res = $this->open($dest, 'w');
-				if($res) {
+				if($res)
+				{
 					$res = stream_copy_to_stream($reader, $this->_fh);
 					$tmperror = $php_errormsg; // save this in case fclose throws an error
 					@fclose($reader);
 					$php_errormsg = $tmperror; // restore after fclose
-				} else {
+				}
+				else
+				{
 					@fclose($reader); // close the reader off
 					$php_errormsg = JText::_('Failed to open writer') .': '. $this->getError();
 				}
-			} else {
+			}
+			else
+			{
 				if(!$php_errormsg) {
 					$php_errormsg = JText::_('Failed to open reader') .': '. $this->getError();
 				}
 			}
-		} else {
+		}
+		else
+		{
 			// since we're going to open the file directly we need to get the filename
 			// we need to use the same prefix so force everything to write
 			$src = $this->_getFilename($src, 'w', $use_prefix, $relative);
@@ -765,7 +878,8 @@ class JStream extends JObject {
 	/**
 	 * Moves a file
 	 */
-	function move($src, $dest, $context=null, $use_prefix=true, $relative=false) {
+	function move($src, $dest, $context=null, $use_prefix=true, $relative=false)
+	{
 		$res = false;
 		// Capture PHP errors
 		$php_errormsg = '';
@@ -794,7 +908,8 @@ class JStream extends JObject {
 	/**
 	 * Delete a file
 	 */
-	function delete($filename, $context=null, $use_prefix=true, $relative=false) {
+	function delete($filename, $context=null, $use_prefix=true, $relative=false)
+	{
 		$res = false;
 		// Capture PHP errors
 		$php_errormsg = '';
@@ -821,7 +936,8 @@ class JStream extends JObject {
 	/**
 	 * Upload a file
 	 */
-	function upload($src, $dest, $context=null, $use_prefix=true, $relative=false) {
+	function upload($src, $dest, $context=null, $use_prefix=true, $relative=false)
+	{
 		if(is_uploaded_file($src)) { // make sure its an uploaded file
 			return $this->copy($src, $dest, $context, $use_prefix, $relative);
 		} else {
@@ -838,8 +954,10 @@ class JStream extends JObject {
 	/**
 	 * Writes a chunk of data to a file
 	 */
-	function writeFile($filename, &$buffer) {
-		if($this->open($filename, 'w')) {
+	function writeFile($filename, &$buffer)
+	{
+		if($this->open($filename, 'w'))
+		{
 			$result = $this->write($buffer);
 			$this->chmod();
 			$this->close();
@@ -855,20 +973,32 @@ class JStream extends JObject {
 	 * @param boolean Controls the use of a prefix
 	 * @param boolean Determines if the filename given is relative. Relative paths do not have JPATH_ROOT stripped.
 	 */
-	function _getFilename($filename, $mode, $use_prefix, $relative) {
-		if($use_prefix) {
+	function _getFilename($filename, $mode, $use_prefix, $relative)
+	{
+		if($use_prefix)
+		{
 			// get rid of binary or t, should be at the end of the string
 			$tmode = trim($mode,'btf123456789');
 			// check if its a write mode then add the appropriate prefix
 			// get rid of JPATH_ROOT (legacy compat) along the way
-			if(in_array($tmode, JFilesystemHelper::getWriteModes())) {
+			if(in_array($tmode, JFilesystemHelper::getWriteModes()))
+			{
 				if(!$relative && $this->writeprefix) $filename = str_replace(JPATH_ROOT, '', $filename);
 				$filename = $this->writeprefix . $filename;
-			} else {
+			}
+			else
+			{
 				if(!$relative && $this->readprefix) $filename = str_replace(JPATH_ROOT, '', $filename);
 				$filename = $this->readprefix . $filename;
 			}
 		}
 		return $filename;
+	}
+	
+	/**
+	 * Return the internal file handle
+	 */
+	function getFileHandle() {
+		return $this->_fh;
 	}
 }
